--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio-cynthiaalvarez.vercel.app/">
     <meta property="og:image" content="https://www.freepik.es/vector-gratis/concepto-diseno-web-estilo-plano_2488325.htm#query=development&position=34&from_view=search&track=sph&uuid=d906451a-ec2e-4c7f-9b7e-fbcfad45d9ad">
-    <meta property="og:description" content="Portfolio de Cynthia Álvarez Rubio, desarrolladora web full stack con más de 1 año de experiencia en el sector trabajando con tecnologías como Angular, React, Node.js, TypeScript, MySQL y Jest, entre otras."
+    <meta property="og:description" content="Portfolio de Cynthia Álvarez Rubio, desarrolladora web full stack con más de 1 año de experiencia en el sector trabajando con tecnologías como Angular, React, Node.js, TypeScript, MySQL y Jest, entre otras.">
     <link rel="icon" type="image/png" href="/laptop.png" /> 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
