--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio-cynthiaalvarez.vercel.app/">
     <meta property="og:image" content="https://img.freepik.com/vector-gratis/concepto-diseno-web-estilo-plano_23-2147854683.jpg?w=740&t=st=1705879358~exp=1705879958~hmac=24f98e82e211d605cbb7480d37a6d524239964a66d2c4cc8211872f38cc26dd4">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:description" content="Portfolio de Cynthia Álvarez Rubio, desarrolladora web full stack con más de 1 año de experiencia en el sector trabajando con tecnologías como Angular, React, Node.js, TypeScript, MySQL y Jest, entre otras.">
     <link rel="icon" type="image/png" href="/laptop.png" /> 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
